# media-renamer

./: .gitignore  README.md  pyproject.toml
app/: app.py  file_renamer.py  filehashes.py  inferrer.py  media_renamer.py  renamer.py  unpacker.py  utils.py
